# AuraRafi

./: .gitignore  Agent.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md  SETUP.md  check_errors.txt  err.txt  tmp_i18n.py  tmp_i18n_fix.py  tmp_i18n_fix2.py  tmp_i18n_fix3.py  tmp_i18n_fix4.py  tmp_imports_fix.py
.ai/: CLAUDE.md  GEMINI.md  STUDIO_GRADE_UI.md  SYSTEM_TRUTH.md  instructions.md
.ai/decisions/: DECISIONS.md
.ai/roles/: cto_lead.md  electronics.md  render_math.md  ui_designer.md
.ai/runbooks/: RUNBOOKS.md
.ai/skills/: DevelopmentEngineAdvance.md  Geminiagent.md  SKILLS.md
.cargo/: config.toml
assets/commands/: catalog.json
crates/raf_ai/: Cargo.toml
crates/raf_ai/src/: asset_gen.rs  chat.rs  director.rs  lib.rs  mesh_provider.rs  openclaw.rs  provider.rs  tool_registry.rs
crates/raf_assets/: Cargo.toml
crates/raf_assets/src/: browser.rs  importer.rs  lib.rs  primitives.rs
crates/raf_core/: Cargo.toml
crates/raf_core/locales/: en.json  es.json
crates/raf_core/src/: command.rs  complement.rs  config.rs  event.rs  ffi.rs  hot_reload.rs  i18n.rs  lib.rs  project.rs  save_system.rs  units.rs  world_state.rs
crates/raf_core/src/ecs/: mod.rs  world.rs
crates/raf_core/src/scene/: anim_collider.rs  collider.rs  graph.rs  merge.rs  mod.rs  runtime.rs
crates/raf_editor/: Cargo.toml
crates/raf_editor/src/: app.rs  electronics_assets.rs  game_runtime.rs  lib.rs  pcb_document.rs  schematic_document.rs  script_support.rs  theme.rs  ui_icons.rs
crates/raf_editor/src/commands/: catalog.rs  electronics.rs  game.rs  mod.rs  output.rs  parser.rs  script.rs  workspace.rs
crates/raf_editor/src/panels/: ai_chat.rs  asset_browser.rs  behaviors.rs  complements.rs  console.rs  gpu_canvas.rs  hierarchy.rs  hub.rs  mod.rs  node_editor.rs  pcb.rs  pcb_panels.rs  pcb_view.rs  project_settings.rs  properties.rs  schematic_panels.rs  schematic_view.rs  settings_panel.rs  shortcuts.rs  viewport.rs  viewport_edit.rs  viewport_grid.rs  viewport_hud.rs  viewport_interaction.rs  viewport_overlay.rs  viewport_render_software.rs
crates/raf_editor/src/panels/pcb_view/: canvas.rs
crates/raf_editor/src/panels/schematic_view/: canvas.rs
crates/raf_electronics/: Cargo.toml
crates/raf_electronics/src/: component.rs  drc.rs  export.rs  extensions.rs  lib.rs  library.rs  netlist.rs  schematic.rs  schematic_graph.rs  simulation.rs
crates/raf_electronics/src/pcb/: footprint.rs  layout.rs  mod.rs
crates/raf_hardware/: Cargo.toml
crates/raf_hardware/src/: actuator.rs  lib.rs  ml.rs  robot.rs  sensor.rs  serial.rs
crates/raf_net/: Cargo.toml
crates/raf_net/src/: lib.rs  protocol.rs
crates/raf_nodes/: Cargo.toml
crates/raf_nodes/src/: compiler.rs  entity_nodes.rs  executor.rs  flow_nodes.rs  graph.rs  hardware_nodes.rs  input_nodes.rs  lib.rs  math_nodes.rs  node.rs
crates/raf_render/: Cargo.toml
crates/raf_render/src/: abstraction.rs  backend.rs  camera.rs  depth_sort.rs  editable.rs  gizmo.rs  gpu_deform.rs  lib.rs  lighting.rs  lod.rs  material.rs  mesh.rs  picking.rs  pipeline.rs  post_process.rs  projection.rs  render_config.rs  renderer.rs  scene_data.rs  scene_renderer.rs  shaders.rs  software_raster.rs  spatial.rs  texture.rs  uv_mapping.rs  world_stream.rs
crates/raf_render/src/ApiGraphicBasic/: command_list.rs  device.rs  grid.rs  mesh.rs  mod.rs  pipeline.rs  recipes.rs  schematic_symbols.rs
crates/raf_render/src/bridge/: input_handler.rs  mod.rs  render_runtime.rs  transform_controller.rs  viewport_bridge.rs
crates/raf_render/src/complements/: complement_trace.rs  mod.rs
crates/raf_render/src/geometry/: mesh_data.rs  mod.rs  primitives.rs
crates/raf_render/src/math/: frustum.rs  mod.rs  ray.rs  transform.rs
crates/raf_render/src/render_pipeline/: framebuffer.rs  mod.rs  rasterizer.rs
crates/raf_script/: Cargo.toml
crates/raf_script/src/: errors.rs  host_api.rs  lib.rs  lifetime.rs  node_handle.rs  prelude.rs  value.rs
crates/raf_script/src/backends/: mod.rs  node_backend.rs  rhai_backend.rs  wasm_backend.rs
crates/raf_script/src/host/: audio_ops.rs  input_ops.rs  interop_ops.rs  mod.rs  property_ops.rs  scene_ops.rs  time_ops.rs  transform_ops.rs
docs/: AI_CONTEXT.md  ARCHITECTURE.md  COMMANDS.md  COMPLEMENT_DEVELOPMENT.md  CONTRIBUTING.md  CPP_MODDING.md  ElectricalSystem.md  GETTING_STARTED.md  GPU_API_DESIGN.md  NODES_SYSTEM.md  RENDERER.md  ROADMAP.md  SCRIPTING_SYSTEM.md  STABILIZATION_STATUS.md  TEMP_PHASE6_RUNTIME_TRUTH_PASS.md  translations.md
editor/: Cargo.toml
editor/src/: main.rs
tools/: generate_electronics_assets.py
