[package]
name = "raf_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visual editor UI for AuraRafi engine"

[dependencies]
raf_core = { workspace = true }
raf_render = { workspace = true }
raf_assets = { workspace = true }
raf_electronics = { workspace = true }
raf_nodes = { workspace = true }
raf_ai = { workspace = true }
raf_net = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs-next = "2"
ron = { workspace = true }
