[package]
name = "raf_hardware"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware integration layer: serial ports, sensors, actuators, and ML/robot interfaces for AuraRafi"

[dependencies]
raf_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
