[package]
name = "raf_net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Networking stubs for future multiplayer in AuraRafi"

[dependencies]
raf_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
