[package]
name = "raf_nodes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visual node-based scripting (no-code) system for AuraRafi"

[dependencies]
raf_core = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
egui = { workspace = true }
