[package]
name = "raf_script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scripting runtime and Host API for AuraRafi (Rhai + WASM + Visual Nodes)"

[dependencies]
raf_core = { workspace = true }
raf_nodes = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
